# PDF

./: .gitignore  README.md  pyproject.toml  requirements.txt
pdf_lib/: __init__.py  firebase_service.py  pdf.py
