# pyproject.toml
[tool.poetry]
name = "pdf_lib"
version = "0.1.0"
description = "Librería para descargar, rellenar y aplanar PDFs desde Firebase Storage"
authors = ["sergio.rodriguez@missioia.com"]
readme = "README.md"
packages = [
    { include = "pdf_lib" }
]

[tool.poetry.dependencies]
python = "^3.8"
pdfrw = "0.4"
reportlab = "3.6.12"
firebase-admin = "5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
